--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -1,5 +1,7 @@
+
+/* heading of login */
 .h1, h1 {
-    font-size: 2.5rem;
+    font-size: 5rem;
 }
 
 fieldset {
@@ -32,10 +34,11 @@ fieldset {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
+    /* login email box and text */
+    color: #f37d08;
+    background-color: rgb(244, 240, 236);
     background-clip: padding-box;
-    border: 1px solid #ced4da;
+    border: 2px solid #f6800b;
     border-radius: .25rem;
     -webkit-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
@@ -50,6 +53,7 @@ fieldset {
     z-index: 1;
     min-height: 25rem;
     min-width: 45rem;
+    /* color for box in */
     background-color: hsla(0,0%,100%,0.40);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
