--- a/src/components/mediations/Mediations.css
+++ b/src/components/mediations/Mediations.css
@@ -7,7 +7,7 @@
 
 .note {
     background-color: rgb(20, 184, 202);
-    border: 2px dotted rgb(20, 133, 208);
+    border: 2px dotted rgba(133, 187, 222, 0.964);
     color: black;
     padding: 0,5rem;
     margin: 0.5rem
