final save at presentation

--- a/src/components/mediations/Mediations.css
+++ b/src/components/mediations/Mediations.css
@@ -6,9 +6,9 @@
 }
 
 .note {
-    background-color: rgb(20, 184, 202);
-    border: 2px dotted rgba(133, 187, 222, 0.964);
-    color: black;
+    background-color: rgba(155, 149, 145, 0.477);
+    border: 2px dotted rgb(240, 125, 9);
+    color: rgb(28, 27, 26);
     padding: 0,5rem;
     margin: 0.5rem
 }
