--- a/src/components/mediators/Mediators.css
+++ b/src/components/mediators/Mediators.css
@@ -6,9 +6,9 @@
 }
 
 .mediator {
-    background-color: hotpink;
-    border: 2px dotted orangered;
-    color: black;
+    background-color: rgba(155, 149, 145, 0.477);
+    border: 2px dotted rgb(240, 125, 9);
+    color: rgb(28, 27, 26);
     padding: 0,5rem;
     margin: 0.5rem
 }
