--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -29,18 +29,20 @@
     background-color: rgba(245, 243, 242, 0.988);
     border: 4px solid rgba(244, 130, 16, 0.973);
     /* text color for VC on mav */
-    color: rgba(248, 129, 10, 0.954);
-    padding: 0,5rem;
+    color: rgba(248, 129, 10, 0.954);font-weight:bolder;
+    padding: 0,5rem;    
     margin: 0.5rem
 }
 /* text for client name links in the client list */
 .navbar__link {
-    color: rgb(16, 15, 15)
-    
+    color: rgb(242, 93, 12);
+    font-weight:bold;
+    text-decoration: none
+  
 }
 .navbar__link {
-    font-family:Comfortaa, Arial, sans-serif;
-    letter-spacing: 2px;
+    font-family:Comfortaa, Arial, sans-serif; 
+    letter-spacing: 3px;
   }
 
 
